--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 <title>Magie Sugary</title>
 <script src="https://kit.fontawesome.com/7e8dfdd8ef.js" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
 <center>
