--- a/FAQ.html
+++ b/FAQ.html
@@ -4,7 +4,7 @@
 <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 <title>Magie Sugary - FAQ</title>
 <script src="https://kit.fontawesome.com/7e8dfdd8ef.js" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
 <center>
@@ -21,6 +21,7 @@
 	<a href="https://discord.gg/TPUz4yhPQU"><i class="fa-brands fa-discord fa-lg"></i></a></div>
 </ul>
 
+<div class="faq-box">
 <h3>What is Magie Sugary?</h3>
 <p><b>Magie Sugary</b> is an upcoming adventure rpg game for PC and Android.</p>
 <h3>When the game will be released?</h3>
@@ -47,6 +48,6 @@
 <p>I would like to release on as many different platforms as possible, but some platforms are a lot more difficult to release without a publisher, so for now I can only guarantee that the game will be available on Windows and Android.</p>
 <h3>What are the system requirements to play Magie Sugary?</h3>
 <p>Because the game is currently in development, it is hard to say for now.</p>
-
+</div>
 </body>
 </html>
