--- a/Characters.html
+++ b/Characters.html
@@ -64,7 +64,7 @@
 		<img src="images/Mary.png" alt="Mary">
 		<div class="char-name"><span>Mary</span></div>
 	</div>
-	<div onclick="char(Peter)" class="char-panel">
+	<div onclick="char(Thomas)" class="char-panel">
 		<img src="images/Thomas.png" alt="Thomas">
 		<div class="char-name"><span>Peter</span></div>
 	</div>
