--- a/Contact.html
+++ b/Contact.html
@@ -22,7 +22,7 @@
 </ul>
 
 <center>
-<p>You can contact me using the <a href="https://discord.gg/TPUz4yhPQU">Official Discord Server</a> or on my private messages <b>Dounford#6679</b></p>
+<p>You can contact me using the <a href="https://discord.gg/TPUz4yhPQU">Official Discord Server</a> or send me an email on <b>dounford@magiesugary.site</b></p>
 </center>
 </body>
 </html>
