Characters Description added

--- a/Characters.html
+++ b/Characters.html
@@ -66,7 +66,7 @@
 	</div>
 	<div onclick="char(Thomas)" class="char-panel">
 		<img src="images/Thomas.png" alt="Thomas">
-		<div class="char-name"><span>Peter</span></div>
+		<div class="char-name"><span>Thomas</span></div>
 	</div>
 	<div onclick="char(Jeanne)" class="char-panel">
 		<img src="images/Jeanne.png" alt="Jeanne">
