--- a/Characters.html
+++ b/Characters.html
@@ -23,7 +23,16 @@
 </ul>
 <div class="char">
 <div class="char-image">
-	<img src="images/Peter.png" id="char-image">
+	<div class="char-portrait">
+		<img src="images/Peter.png" height="300px" id="char-portrait">
+	</div>
+	<div class="char-body">
+		<img src="images/PeterBody.png" height="300px" id="char-body" style="display:none">
+	</div>
+	<div class="image-selectors">
+	<div class="iselector" id="portrait" onclick="portrait()">Portrait</div>
+	<div class="iselector" id="button-body" onclick="ibody()">Body</div>
+	</div>
 </div>
 <div class="char-info">
 <h1 id="char-name">Peter</h1>
@@ -45,35 +54,35 @@
 <hr style="width:100%">
 <div class="char-list">
 	<div onclick="char(Peter)" class="char-panel">
-		<img src="images/Peter.png" alt="Peter">
+		<img src="images/Peter.png" height="233px" style="border-radius:12px;" alt="Peter">
 		<div class="char-name"><span>Peter</span></div>
 	</div>
 	<div onclick="char(Julie)" class="char-panel">
-		<img src="images/Julie.png" alt="Julie">
+		<img src="images/Julie.png" height="233px" style="border-radius:12px;" alt="Julie">
 		<div class="char-name"><span>Julie</span></div>
 	</div>
 	<div onclick="char(Harry)" class="char-panel">
-		<img src="images/Harry.png" alt="Harry">
+		<img src="images/Harry.png" height="233px" style="border-radius:12px;" alt="Harry">
 		<div class="char-name"><span>Harry</span></div>
 	</div>
 	<div onclick="char(Greg)" class="char-panel">
-		<img src="images/Greg.png" alt="Greg">
+		<img src="images/Greg.png" height="233px" style="border-radius:12px;" alt="Greg">
 		<div class="char-name"><span>Greg</span></div>
 	</div>
 	<div onclick="char(Mary)" class="char-panel">
-		<img src="images/Mary.png" alt="Mary">
+		<img src="images/Mary.png" height="233px" style="border-radius:12px;" alt="Mary">
 		<div class="char-name"><span>Mary</span></div>
 	</div>
 	<div onclick="char(Thomas)" class="char-panel">
-		<img src="images/Thomas.png" alt="Thomas">
+		<img src="images/Thomas.png" height="233px" style="border-radius:12px;" alt="Thomas">
 		<div class="char-name"><span>Thomas</span></div>
 	</div>
 	<div onclick="char(Jeanne)" class="char-panel">
-		<img src="images/Jeanne.png" alt="Jeanne">
+		<img src="images/Jeanne.png" height="233px" style="border-radius:12px;" alt="Jeanne">
 		<div class="char-name"><span>Jeanne</span></div>
 	</div>
 	<div onclick="char(Emily)" class="char-panel">
-		<img src="images/Emily.png" alt="Emily">
+		<img src="images/Emily.png" height="233px" style="border-radius:12px;" alt="Emily">
 		<div class="char-name"><span>Emily</span></div>
 	</div>
 </div>
