--- a/GM.html
+++ b/GM.html
@@ -5,6 +5,7 @@
 <title>Magie Sugary - Characters</title>
 <script src="https://kit.fontawesome.com/7e8dfdd8ef.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="CSS/style.css">
+<meta charset="ISO-8859-1">
 <script src="JS/main.js"></script>
 <script src="JS/GM.js"></script>
 </head>
