Zulik Chart added

--- a/Characters.html
+++ b/Characters.html
@@ -14,8 +14,9 @@
 <ul class="topnav">
 	<a href="home.html">Home</a>
 	<a class="active" href="Characters.html">Characters</a>
+	<a href="Zulik.html">Language</a>
 	<a href="FAQ.html">FAQ</a>
-	<a href="https://wiki.magiesugary.site">Wiki</a>
+	<a href="https://magiesugary.miraheze.org/wiki/Main_Page">Wiki</a>
 	<div style="float:right;padding-right:40px;">
 	<a href="https://www.facebook.com/MagieSugary"><i class="fa-brands fa-facebook fa-lg"></i></a>
 	<a href="Contact.html"><i class="fa-solid fa-envelope fa-lg"></i></a>
