--- a/FAQ.html
+++ b/FAQ.html
@@ -5,6 +5,7 @@
 <title>Magie Sugary - FAQ</title>
 <script src="https://kit.fontawesome.com/7e8dfdd8ef.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="CSS/style.css">
+<script src="JS/main.js"></script>
 </head>
 <body>
 <center>
@@ -13,8 +14,9 @@
 <ul class="topnav">
 	<a href="home.html">Home</a>
 	<a href="Characters.html">Characters</a>
+	<a href="Zulik.html">Language</a>
 	<a class="active" href="FAQ.html">FAQ</a>
-	<a href="https://wiki.magiesugary.site">Wiki</a>
+	<a href="https://magiesugary.miraheze.org/wiki/Main_Page">Wiki</a>
 	<div style="float:right;padding-right:40px;">
 	<a href="https://www.facebook.com/MagieSugary"><i class="fa-brands fa-facebook fa-lg"></i></a>
 	<a href="Contact.html"><i class="fa-solid fa-envelope fa-lg"></i></a>
@@ -34,6 +36,8 @@
 <p>Magie Sugary is planned to be released at least with English and Brazilian Portuguese.</p>
 <h3>Will this game have multiplayer support?</h3>
 <p>Yes. It will not be available on release, but will be implemented on an update.</p>
+<h3>What is Zulik?</h3>
+<p>Zulik is the language of Magie Sugary world.</p>
 <h3>Does it have an protagonist?</h3>
 <p>Yes, you can choose between the siblings Peter and Julie.</p>
 <h3>How many playable characters will be on the final game?</h3>
