--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
 <title>Magie Sugary</title>
 <script src="https://kit.fontawesome.com/7e8dfdd8ef.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="CSS/style.css">
+<script src="JS/main.js"></script>
 </head>
 <body>
 <center>
@@ -13,8 +14,9 @@
 <ul class="topnav">
 	<a class="active" href="home.html">Home</a>
 	<a href="Characters.html">Characters</a>
+	<a href="Zulik.html">Language</a>
 	<a href="FAQ.html">FAQ</a>
-	<a href="https://wiki.magiesugary.site">Wiki</a>
+	<a href="https://magiesugary.miraheze.org/wiki/Main_Page">Wiki</a>
 	<div style="float:right;padding-right:40px;">
 	<a href="https://www.facebook.com/MagieSugary"><i class="fa-brands fa-facebook fa-lg"></i></a>
 	<a href="Contact.html"><i class="fa-solid fa-envelope fa-lg"></i></a>
