--- a/Contact.html
+++ b/Contact.html
@@ -8,6 +8,7 @@
 <script src="JS/main.js"></script>
 </head>
 <body>
+<main>
 <center>
 <h1 class="mslogo">MAGIE SUGARY</h1>
 </center>
@@ -26,5 +27,15 @@
 <center>
 <p>You can contact me using the <a href="https://discord.gg/TPUz4yhPQU">Official Discord Server</a> or send me an email on <b>dounford@magiesugary.site</b></p>
 </center>
+</main>
+<footer>
+    <ul>
+        <li>© 2023 Felipe Dounford</li>
+        <li>All rights reserved</li>
+	</ul>
+    <ul style="float:right">
+		<li>ba</li>
+	</ul>
+</footer>
 </body>
 </html>
