--- a/GM.html
+++ b/GM.html
@@ -5,11 +5,11 @@
 <title>Magie Sugary - Characters</title>
 <script src="https://kit.fontawesome.com/7e8dfdd8ef.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="CSS/style.css">
-<meta charset="ISO-8859-1">
 <script src="JS/main.js"></script>
 <script src="JS/GM.js"></script>
 </head>
 <body>
+<main>
 <div class="liam">
 <span id="hi">HE IS WATCHING US</span>
 <br>
@@ -17,5 +17,12 @@
 <br>
 <button onclick="ask()">Ask</button>
 </div>
+</main>
+<footer>
+    <ul>
+        <li>© 2023 Felipe Dounford</li>
+        <li>All rights reserved</li>
+	</ul>
+</footer>
 </body>
 </html>
