--- a/Characters.html
+++ b/Characters.html
@@ -8,6 +8,7 @@
 <script src="JS/main.js"></script>
 </head>
 <body>
+<main>
 <center>
 <h1 class="mslogo">MAGIE SUGARY</h1>
 </center>
@@ -52,7 +53,7 @@
 </div>
 </div>
 </div>
-<hr style="width:100%">
+<hr style="width:99%">
 <div class="char-list">
 	<div onclick="char(Peter)" class="char-panel">
 		<img src="images/Peter.png" height="233px" style="border-radius:12px;" alt="Peter">
@@ -87,5 +88,15 @@
 		<div class="char-name"><span>Emily</span></div>
 	</div>
 </div>
+</main>
+<footer>
+    <ul>
+        <li>© 2023 Felipe Dounford</li>
+        <li>All rights reserved</li>
+	</ul>
+    <ul style="float:right">
+		<li>&#8595;&#8595;</li>
+	</ul>
+</footer>
 </body>
 </html>
