--- a/FAQ.html
+++ b/FAQ.html
@@ -8,6 +8,7 @@
 <script src="JS/main.js"></script>
 </head>
 <body>
+<main>
 <center>
 <h1 class="mslogo">MAGIE SUGARY</h1>
 </center>
@@ -53,5 +54,15 @@
 <h3>What are the system requirements to play Magie Sugary?</h3>
 <p>Because the game is currently in development, it is hard to say for now.</p>
 </div>
+</main>
+<footer>
+    <ul>
+        <li>© 2023 Felipe Dounford</li>
+        <li>All rights reserved</li>
+	</ul>
+    <ul style="float:right">
+		<li>&#8592;&#8594;</li>
+	</ul>
+</footer>
 </body>
 </html>
