--- a/Zulik.html
+++ b/Zulik.html
@@ -8,6 +8,7 @@
 <script src="JS/main.js"></script>
 </head>
 <body>
+<main>
 <center>
 <h1 class="mslogo">MAGIE SUGARY</h1>
 </center>
@@ -27,5 +28,15 @@
 	<img src="images/FonaChart.png" alt="Fona Chart">
 </div>
 </div>
+</main>
+<footer>
+    <ul>
+        <li>© 2023 Felipe Dounford</li>
+        <li>All rights reserved</li>
+	</ul>
+    <ul style="float:right">
+		<li>&#8592;&#8594;</li>
+	</ul>
+</footer>
 </body>
 </html>
