--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
 <script src="JS/main.js"></script>
 </head>
 <body>
+<main>
 <center>
 <h1 class="mslogo">MAGIE SUGARY</h1>
 </center>
@@ -26,5 +27,15 @@
 <center>
 <p>Magie Sugary is an adventure rpg game, where you must scavenge for resources, fight with enemies and bosses and craft to survive!</p>
 </center>
+</main>
+<footer>
+    <ul>
+        <li>© 2023 Felipe Dounford</li>
+        <li>All rights reserved</li>
+	</ul>
+    <ul style="float:right">
+		<li>&#8593;&#8593;</li>
+	</ul>
+</footer>
 </body>
 </html>
