--- a/404.html
+++ b/404.html
@@ -2,20 +2,17 @@
 <html>
 <head>
 <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-<title>Magie Sugary - Zulik</title>
+<title>Magie Sugary - 404</title>
 <script src="https://kit.fontawesome.com/7e8dfdd8ef.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="CSS/style.css">
 <script src="JS/main.js"></script>
 </head>
 <body>
 <main>
-<center>
-<h1 class="mslogo">MAGIE SUGARY</h1>
-</center>
-<ul class="topnav">
+<ul class="topnav" style="margin-top:0">
 	<a href="home.html">Home</a>
 	<a href="Characters.html">Characters</a>
-	<a class="active" href="Zulik.html">Language</a>
+	<a href="Zulik.html">Language</a>
 	<a href="FAQ.html">FAQ</a>
 	<a href="https://magiesugary.miraheze.org/wiki/Main_Page">Wiki</a>
 	<div style="float:right;padding-right:40px;">
@@ -23,19 +20,18 @@
 	<a href="Contact.html"><i class="fa-solid fa-envelope fa-lg"></i></a>
 	<a href="https://discord.gg/TPUz4yhPQU"><i class="fa-brands fa-discord fa-lg"></i></a></div>
 </ul>
-<div class="faq-box">
-<div class="charts">
-	<img src="images/FonaChart.png" alt="Fona Chart">
+
+<center>
+<div class="d404">
+	<img src="images/catLiam.png" style="width:100%;" alt="Him">
 </div>
-</div>
+<h1 style="width:70%">"Oh dear, you are not supposed to be here, mayhaps you would find it more desirable to redirect to the <a href="home.html">Home</a>."</h1>
+</center>
 </main>
 <footer>
     <ul>
         <li>© 2023 Felipe Dounford</li>
         <li>All rights reserved</li>
-	</ul>
-    <ul style="float:right">
-		<li>&#8592;&#8594;</li>
 	</ul>
 </footer>
 </body>
