--- a/Contact.html
+++ b/Contact.html
@@ -25,7 +25,7 @@
 </ul>
 
 <center>
-<p>You can contact me using the <a href="https://discord.gg/TPUz4yhPQU">Official Discord Server</a> or send me an email on <b>dounford@magiesugary.site</b></p>
+<h2>You can contact me using the <a href="https://discord.gg/TPUz4yhPQU">Official Discord Server</a> or send me an email on <b>dounford@magiesugary.site</b></h2>
 </center>
 </main>
 <footer>
