--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
 </ul>
 
 <center>
-<p>Magie Sugary is an adventure rpg game, where you must scavenge for resources, fight with enemies and bosses and craft to survive!</p>
+<h2>Magie Sugary is an upcoming 3D adventure rpg game, where you must scavenge for resources, fight with enemies and bosses and craft to survive!</h2>
 </center>
 </main>
 <footer>
