--- a/GM.html
+++ b/GM.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-<title>Magie Sugary - Characters</title>
+<title>Magie Sugary - Big L</title>
 <script src="https://kit.fontawesome.com/7e8dfdd8ef.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="CSS/style.css">
 <script src="JS/main.js"></script>
