--- a/GM.html
+++ b/GM.html
@@ -24,29 +24,29 @@
 	</ul>
 </footer>
 <script>var questions = {
-  "who": process.env.Q1,
-  "since when": process.env.Q2,
-  "why": process.env.Q3,
-  "can we stop him": process.env.Q4,
-  "can i stop him": process.env.Q5,
-  "can melissa stop him": process.env.Q6,
-  "i miss you": process.env.Q7,
-  "sorry": process.env.Q8,
-  "i hate myself": process.env.Q9,
-  "i hate you": process.env.Q10,
-  "magie": process.env.Q11,
-  "what magie sugary means": process.env.Q12,
-  "what magie sugary means to you": process.env.Q13,
-  "who is ms": process.env.Q14,
-  "what ms means": process.env.Q15,
-  "what i mean to you": process.env.Q16,
-  "what melissa suede means to you": process.env.Q17,
-  "who is melissa": process.env.Q18,
-  "are you good": process.env.Q19,
-  "where are you": process.env.Q20,
-  "can i reach you": process.env.Q21,
-  "can you see the future": process.env.Q22,
-  "\u16c9\u16e1\u16df\u00B0": process.env.Q23,
+  "who": "{{Q1}}",
+  "since when": "{{Q2}}",
+  "why": "{{Q3}}",
+  "can we stop him": "{{Q4}}",
+  "can i stop him": "{{Q5}}",
+  "can melissa stop him": "{{Q6}}",
+  "i miss you": "{{Q7}}",
+  "sorry": "{{Q8}}",
+  "i hate myself": "{{Q9}}",
+  "i hate you": "{{Q10}}",
+  "magie": "{{Q11}}",
+  "what magie sugary means": "{{Q12}}",
+  "what magie sugary means to you": "{{Q13}}",
+  "who is ms": "{{Q14}}",
+  "what ms means": "{{Q15}}",
+  "what i mean to you": "{{Q16}}",
+  "what melissa suede means to you": "{{Q17}}",
+  "who is melissa": "{{Q18}}",
+  "are you good": "{{Q19}}",
+  "where are you": "{{Q20}}",
+  "can i reach you": "{{Q21}}",
+  "can you see the future": "{{Q22}}",
+  "\u16c9\u16e1\u16df\u00B0": "{{Q23}}",
   "default": "HE IS WATCHING US"
 }
 function ask() {
