Fixed fona chart

--- a/FAQ.html
+++ b/FAQ.html
@@ -31,22 +31,18 @@
 <p>As of now it does not have an official release date.</p>
 <h3>Who is making it?</h3>
 <p>Everything is being developed solo by <b>Felipe Dounford</b>.</p>
+<h3>Which game engine are you using?</h3>
+<p>GameMaker.</p>
+<h3>Who made the amazing images on characters page?</h3>
+<p>It was made by the amazing <a href="https://comigo.itch.io/">CoMiGo</a>.</p>
 <h3>Will it have controller support?</h3>
 <p>Yes, the game will have full controller support and remapping option.</p>
 <h3>What languages the game will support?</h3>
 <p>Magie Sugary is planned to be released at least with English and Brazilian Portuguese.</p>
 <h3>Will this game have multiplayer support?</h3>
-<p>Yes. It will not be available on release, but will be implemented on an update.</p>
+<p>currently there are no plans for multiplayer.</p>
 <h3>What is Zulik?</h3>
 <p>Zulik is the language of Magie Sugary world.</p>
-<h3>Does it have an protagonist?</h3>
-<p>Yes, you can choose between the siblings Peter and Julie.</p>
-<h3>How many playable characters will be on the final game?</h3>
-<p>The game will have 9 or more characters on release.</p>
-<h3>How many weapons will be on the final game?</h3>
-<p>More than 100.</p>
-<h3>Where will it take place?</h3>
-<p>Magie Sugary is divided on sections, each section has its own theme, including Forrest, Old West, Steampunk and A Magic Kingdom.</p>
 <h3>I have an idea for a feature/character how can I talk with you?</h3>
 <p>It is possible to contact me using the <a href="https://discord.gg/TPUz4yhPQU">Official Discord Server</a>.</p>
 <h3>Is this game coming to <b>X</b> platform?</h3>
