--- a/Zulik.html
+++ b/Zulik.html
@@ -24,9 +24,7 @@
 	<a href="https://discord.gg/TPUz4yhPQU"><i class="fa-brands fa-discord fa-lg"></i></a></div>
 </ul>
 <div class="faq-box">
-<div class="charts">
-	<img src="images/FonaChart.png" alt="Fona Chart">
-</div>
+	<img src="images/FonaChart.png" alt="Fona Chart" class="chartItem">
 </div>
 </main>
 <footer>
